--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"vue-template-compiler": "^2.6.10"
 	},
 	"dependencies": {
-		"bootstrap-icons": "^1.0.0-alpha3"
+		"bootstrap-icons": "^1.0.0-alpha3",
+		"slug": "^2.1.1"
 	}
 }
