--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"vue-template-compiler": "^2.6.10"
 	},
 	"dependencies": {
-		"bootstrap-icons": "^1.0.0-alpha3",
-		"slug": "^2.1.1"
+		"@ckeditor/ckeditor5-build-classic": "^18.0.0",
+		"@ckeditor/ckeditor5-vue": "^1.0.1",
+		"bootstrap-icons": "^1.0.0-alpha3"
 	}
 }
