--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
 		"vue-template-compiler": "^2.6.10"
 	},
 	"dependencies": {
-		"@ckeditor/ckeditor5-build-classic": "^18.0.0",
-		"@ckeditor/ckeditor5-vue": "^1.0.1",
-		"bootstrap-icons": "^1.0.0-alpha3"
+		"bootstrap-icons": "^1.0.0-alpha3",
+		"ckeditor4-vue": "^0.2.0"
 	}
 }
